...
      style={[styles.container, { backgroundColor: colors.background }]}
    >
      <ScrollView
        style={[styles.scrollView, { backgroundColor: colors.background }]}
      >
        <Text style={[styles.title, { color: colors.text }]}>
          Stripe Identity
        </Text>
        <Options options={options} setOptions={setOptions} />
        <View
          style={[styles.divider, { borderBottomColor: colors.separator }]}
        />
        <Identity fetchOptions={fetchOptions} />
...
