...
    (options.verificationType === VerificationType.PHONE &&
      options.phoneFallbackToDocument);

  return (
    <View style={styles.container}>
      <Option
        testID="use-test-mode"
        title="Use Test Mode"
        value={options.useTestMode}
        onChange={(value) => setOptions({ ...options, useTestMode: value })}
      />
      <Choices
        label="Verification Type:"
...
