...
      <CheckoutPlaygroundCartView
        clientSecret={clientSecret}
        config={config}
        onSuccessfulPayment={() => {
          navigation.goBack();
          Alert.alert(
            'Payment successful',
            'The Checkout Session was confirmed.'
          );
        }}
      />
    );
  }
...
